--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UK Enterprise Pvt. Ltd.</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UK Enterprises Pvt. Ltd.</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>UK Enterprise Pvt. Ltd.</h1>
-    <p>Learn & Download Free Notes</p>
-    <a class="button" href="https://wa.me/9359151123" target="_blank">📲 Enroll Now on WhatsApp</a>
-    <a class="insta" href="#" target="_blank">📸 Instagram</a>
-  </header>
+    <h1>Welcome to UK Enterprises Pvt. Ltd.</h1>
+    <p>Learn MS Office, Advanced Excel, AutoCAD, CorelDRAW, Photoshop, and C Programming.</p>
 
-  <section class="courses">
-    <h2>Our Courses</h2>
-    <ul>
-      <li>MS Office - <a href="notes/ms-office.pdf" download>📥 Download Notes</a></li>
-      <li>Advanced Excel - <a href="notes/adv-excel.pdf" download>📥 Download Notes</a></li>
-      <li>AutoCAD 2D/3D - <a href="notes/autocad.pdf" download>📥 Download Notes</a></li>
-      <li>CorelDRAW - <a href="notes/coreldraw.pdf" download>📥 Download Notes</a></li>
-      <li>Photoshop - <a href="notes/photoshop.pdf" download>📥 Download Notes</a></li>
-      <li>C Programming - <a href="notes/cprogramming.pdf" download>📥 Download Notes</a></li>
-    </ul>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 UK Enterprise Pvt. Ltd. | Designed by Uday</p>
-  </footer>
+    <!-- Footer Section -->
+    <footer>
+        <div class="social-links">
+            <p>Follow Us:</p>
+            <a href="https://www.instagram.com/ukcomputer64?igsh=Y3d0ZTViZnA2c202" target="_blank">Instagram</a> |
+            <a href="https://wa.me/9359151123" target="_blank">WhatsApp</a> |
+            <a href="https://youtube.com/@yourchannelname" target="_blank">YouTube</a> |
+            <a href="https://t.me/ukcomputer64" target="_blank">Telegram</a>
+        </div>
+        <p>&copy; 2025 UK Enterprises Pvt. Ltd. All rights reserved.</p>
+    </footer>
 </body>
 </html>
