--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to UK Enterprises Pvt. Ltd.</h1>
-    <p>Learn MS Office, Advanced Excel, AutoCAD, CorelDRAW, Photoshop, and C Programming.</p>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="social-links">
-            <p>Follow Us:</p>
-            <a href="https://www.instagram.com/ukcomputer64?igsh=Y3d0ZTViZnA2c202" target="_blank">Instagram</a> |
-            <a href="https://wa.me/9359151123" target="_blank">WhatsApp</a> |
-            <a href="https://youtube.com/@yourchannelname" target="_blank">YouTube</a> |
-            <a href="https://t.me/ukcomputer64" target="_blank">Telegram</a>
-        </div>
-        <p>&copy; 2025 UK Enterprises Pvt. Ltd. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>Welcome to UK Enterprises Pvt. Ltd.</h1>
+            <p>Learn MS Office, Advanced Excel, AutoCAD, CorelDRAW, Photoshop, and C Programming.</p>
+        </header>
+        <footer>
+            <div class="social-links">
+                <p>Follow Us</p>
+                <a href="https://www.instagram.com/ukcomputer64?igsh=Y3d0ZTViZnA2c202" target="_blank">Instagram</a>
+                <a href="https://t.me/ukcomputer64" target="_blank">Telegram</a>
+                <a href="https://wa.me/918446844123" target="_blank">WhatsApp</a>
+            </div>
+            <p>&copy; 2025 UK Enterprises Pvt. Ltd. All rights reserved</p>
+        </footer>
+    </div>
 </body>
 </html>
