--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Welcome to UK Enterprises Pvt. Ltd.</h1>
+            <h1>Welcome to UK Computer & IT Tech.</h1>
             <p>Learn MS Office, Advanced Excel, AutoCAD, CorelDRAW, Photoshop, and C Programming.</p>
         </header>
         <footer>
